syntax = "proto3";

option go_package = "github.com/mqsrr/zylo/feed-service/proto;proto";
package feed_service;

service FeedService {
  rpc GetPostsRecommendations(GetRecommendedPostsRequest) returns (RecommendedPosts);
}

message GetRecommendedPostsRequest{
  string user_id = 1;
  optional string last_post_id = 2;
  optional uint32 per_page = 3;
  optional uint32 min_likes = 4;
}

message RecommendedPosts{
  repeated string post_ids = 1;
  uint32 per_page = 2;
  bool has_next_page = 3;
  string next = 4;
}